@@ -1,16 +1,24 @@
 package kakaotech.bootcamp.respec.specranking.domain.chat.chatparticipation.service;
 
-import java.time.LocalDateTime;
+import static kakaotech.bootcamp.respec.specranking.domain.auth.constant.AuthConstant.LOGIN_REQUIRED_MESSAGE;
+import static kakaotech.bootcamp.respec.specranking.domain.chat.chatparticipation.constant.ChatParticipationConstant.CHAT_NOT_FOUND_MESSAGE;
+import static kakaotech.bootcamp.respec.specranking.domain.chat.chatparticipation.constant.ChatParticipationConstant.GET_CHAT_PARTICIPATIONS_SUCCESS_MESSAGE;
+import static kakaotech.bootcamp.respec.specranking.domain.chat.chatparticipation.constant.ChatParticipationConstant.PARTNER_NOT_FOUND_MESSAGE;
+import static kakaotech.bootcamp.respec.specranking.domain.user.constants.UserConstant.USER_NOT_FOUND_MESSAGE;
+
 import java.util.List;
-import java.util.stream.Collectors;
+import kakaotech.bootcamp.respec.specranking.domain.auth.exception.LoginRequiredException;
 import kakaotech.bootcamp.respec.specranking.domain.chat.chat.entity.Chat;
 import kakaotech.bootcamp.respec.specranking.domain.chat.chat.repository.ChatRepository;
 import kakaotech.bootcamp.respec.specranking.domain.chat.chatparticipation.dto.response.ChatParticipationListResponse;
 import kakaotech.bootcamp.respec.specranking.domain.chat.chatparticipation.dto.response.ChatParticipationListResponse.ChatParticipationListData;
 import kakaotech.bootcamp.respec.specranking.domain.chat.chatparticipation.dto.response.ChatParticipationListResponse.ChatRoomDto;
 import kakaotech.bootcamp.respec.specranking.domain.chat.chatparticipation.entity.ChatParticipation;
+import kakaotech.bootcamp.respec.specranking.domain.chat.chatparticipation.exception.ChatNotFoundException;
+import kakaotech.bootcamp.respec.specranking.domain.chat.chatparticipation.exception.ChatPartnerNotFoundException;
 import kakaotech.bootcamp.respec.specranking.domain.chat.chatparticipation.repository.ChatParticipationRepository;
 import kakaotech.bootcamp.respec.specranking.domain.user.entity.User;
+import kakaotech.bootcamp.respec.specranking.domain.user.exception.UserNotFoundException;
 import kakaotech.bootcamp.respec.specranking.domain.user.repository.UserRepository;
 import kakaotech.bootcamp.respec.specranking.domain.user.util.UserUtils;
 import lombok.RequiredArgsConstructor;
@@ -28,7 +36,7 @@ public class ChatParticipationService {
 
     public ChatParticipationListResponse getChatParticipationList() {
         Long loginUserId = UserUtils.getCurrentUserId()
-                .orElseThrow(() -> new IllegalArgumentException("로그인이 필요한 서비스입니다."));
+                .orElseThrow(() -> new LoginRequiredException(LOGIN_REQUIRED_MESSAGE));
 
         List<ChatParticipation> participations = chatParticipationRepository
                 .findAllByUserIdOrderByLastChatroomMessage(loginUserId);
@@ -44,30 +52,21 @@ public class ChatParticipationService {
                             .map(cp -> cp.getUser().getId())
                             .filter(id -> !id.equals(loginUserId))
                             .findFirst()
-                            .orElseThrow(() -> new IllegalArgumentException("채팅에 참여한 상대 사용자 정보를 찾을 수 없습니다."));
+                            .orElseThrow(() -> new ChatPartnerNotFoundException(PARTNER_NOT_FOUND_MESSAGE));
 
                     User partner = userRepository.findById(partnerId)
-                            .orElseThrow(() -> new IllegalArgumentException("파트너 정보를 찾을 수 없습니다."));
+                            .orElseThrow(() -> new UserNotFoundException(USER_NOT_FOUND_MESSAGE));
 
                     Chat lastChat = chatRepository.findLatestChatWithCursor(chatroomId)
-                            .orElseThrow(() -> new IllegalArgumentException("채팅이 없는데 채팅방이 있을 수 없습니다."));
+                            .orElseThrow(() -> new ChatNotFoundException(CHAT_NOT_FOUND_MESSAGE));
 
-                    String lastMessage = lastChat.getContent();
-                    LocalDateTime lastMessageTime = lastChat.getCreatedAt();
-
-                    return new ChatRoomDto(
-                            chatroomId,
-                            partnerId,
-                            partner.getNickname(),
-                            partner.getUserProfileUrl(),
-                            lastMessage,
-                            lastMessageTime
-                    );
+                    return new ChatRoomDto(chatroomId, partnerId, partner.getNickname(),
+                            partner.getUserProfileUrl(), lastChat.getContent(), lastChat.getCreatedAt());
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         ChatParticipationListData data = new ChatParticipationListData(chatroomDtos);
 
-        return new ChatParticipationListResponse(true, "채팅방 목록 조회 성공", data);
+        return new ChatParticipationListResponse(true, GET_CHAT_PARTICIPATIONS_SUCCESS_MESSAGE, data);
     }
 }
